add ads modal gallaryPopup-ads.js and fix gallaryPopup

--- a/src/blocks/modules/ads-slider-user/ads-slider-user.html
+++ b/src/blocks/modules/ads-slider-user/ads-slider-user.html
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </div>
-            <button class="ads-user__photo-zoom"></button>
+            <button class="ads-user__photo-zoom thumbs-slider__zoom "></button>
         </div>
         <div class="swiper-button swiper-button-prev ads-user__photo-prev"></div>
         <div class="swiper-button swiper-button-next ads-user__photo-next"></div>
