--- a/src/blocks/modules/galleryPopup/galleryPopup.html
+++ b/src/blocks/modules/galleryPopup/galleryPopup.html
@@ -20,6 +20,10 @@
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+                                    <div class="like-item">
+                                        <i class="icon icon--like-gray"></i>
+                                        0
+                                    </div>
                                     <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
                                 </div>
                             </div>
@@ -32,6 +36,10 @@
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+                                    <div class="like-item">
+                                        <i class="icon icon--like-gray"></i>
+                                        0
+                                    </div>
                                     <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
                                 </div>
                             </div>
@@ -44,6 +52,10 @@
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+                                    <div class="like-item">
+                                        <i class="icon icon--like-gray"></i>
+                                        0
+                                    </div>
                                     <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
                                 </div>
                             </div>
@@ -56,6 +68,10 @@
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+                                    <div class="like-item">
+                                        <i class="icon icon--like-gray"></i>
+                                        0
+                                    </div>
                                     <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
                                 </div>
                             </div>
@@ -68,6 +84,10 @@
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+                                    <div class="like-item">
+                                        <i class="icon icon--like-gray"></i>
+                                        0
+                                    </div>
                                     <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
                                 </div>
                             </div>
@@ -80,6 +100,10 @@
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+                                    <div class="like-item">
+                                        <i class="icon icon--like-gray"></i>
+                                        0
+                                    </div>
                                     <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
                                 </div>
                             </div>
@@ -92,6 +116,10 @@
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+                                    <div class="like-item">
+                                        <i class="icon icon--like-gray"></i>
+                                        0
+                                    </div>
                                     <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
                                 </div>
                             </div>
@@ -104,6 +132,10 @@
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+                                    <div class="like-item">
+                                        <i class="icon icon--like-gray"></i>
+                                        0
+                                    </div>
                                     <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
                                 </div>
                             </div>
@@ -116,6 +148,10 @@
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+                                    <div class="like-item">
+                                        <i class="icon icon--like-gray"></i>
+                                        0
+                                    </div>
                                     <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
                                 </div>
                             </div>
@@ -128,6 +164,10 @@
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+                                    <div class="like-item">
+                                        <i class="icon icon--like-gray"></i>
+                                        0
+                                    </div>
                                     <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
                                 </div>
                             </div>
