--- a/src/blocks/modules/unknown/unknown.html
+++ b/src/blocks/modules/unknown/unknown.html
@@ -1,9 +1,32 @@
 <div class="row">
     <div class="col-12">
-
         <div class="unknown">
             <div class="unknown-slider swiper-container js-unknown">
                 <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <a href="#0" class="js-unknown-slide">
+                            <picture>
+                                <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#0" class="js-unknown-slide">
+                            <picture>
+                                <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#0" class="js-unknown-slide">
+                            <picture>
+                                <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                            </picture>
+                        </a>
+                    </div>
                     <div class="swiper-slide">
                         <a href="#0" class="js-unknown-slide">
                             <picture>
@@ -93,6 +116,14 @@
                             </picture>
                         </a>
                     </div>
+                    <div class="swiper-slide">
+                        <a href="#0" class="js-unknown-slide">
+                            <picture>
+                                <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                <img src="img/unknown-1-1.jpg" alt="image_alt">
+                            </picture>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="swiper-button swiper-button-prev"></div>
@@ -139,6 +170,14 @@
                             <picture>
                                 <source srcset="img/unknown-1-1.webp" type="image/webp">
                                 <img src="img/unknown-1-1.jpg" alt="image_alt">
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#0" class="js-unknown-slide">
+                            <picture>
+                                <source srcset="img/unknown-2-1.webp" type="image/webp">
+                                <img src="img/unknown-2-1.jpg" alt="image_alt">
                             </picture>
                         </a>
                     </div>
@@ -156,9 +195,26 @@
             <div class="swiper-button swiper-button-next"></div>
         </div
 
-        ><div class="unknown">
+        >
+        <div class="unknown">
             <div class="unknown-slider swiper-container js-unknown">
                 <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <a href="#0" class="js-unknown-slide">
+                            <picture>
+                                <source srcset="img/img-6-col.webp" type="image/webp">
+                                <img src="img/img-6-col.png" alt="image_alt">
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#0" class="js-unknown-slide">
+                            <picture>
+                                <source srcset="img/img-6-col.webp" type="image/webp">
+                                <img src="img/img-6-col.png" alt="image_alt">
+                            </picture>
+                        </a>
+                    </div>
                     <div class="swiper-slide">
                         <a href="#0" class="js-unknown-slide">
                             <picture>
