--- a/src/blocks/modules/videoPopup/videoPopup.html
+++ b/src/blocks/modules/videoPopup/videoPopup.html
@@ -11,6 +11,14 @@
                 <div class="modal-content__video">
                     <div class="inner js-video-container--modal"></div>
                 </div>
+                <div class="thumbs-slider__description ">
+                    <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+                    <div class="like-item">
+                        <i class="icon icon--like-gray"></i>
+                        0
+                    </div>
+                    <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
+                </div>
                 {% include 'comments/comments.html' %}
             </div>
         </div>
