start responsive, fix buglog

--- a/src/blocks/modules/breadcrumbs/breadcrumbs.html
+++ b/src/blocks/modules/breadcrumbs/breadcrumbs.html
@@ -1,5 +1,8 @@
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
+    <ol class="breadcrumb breadcrumb--pc">
         <li class="breadcrumb-item"><a href="#">Главная</a></li>
     </ol>
+    <div class="breadcrumb breadcrumb--mob">
+        <a href="/" class="breadcrumb-prev">Главная</a>
+    </div>
 </nav>
