--- a/src/blocks/modules/calendar/calendar.html
+++ b/src/blocks/modules/calendar/calendar.html
@@ -58,7 +58,7 @@
                 <button class="date-item badge">27</button>
                 <div class="calendar-events">
                     <div class="calendar-event calendar-event--green">
-                        Совет директоров
+                        <div class="calendar-event__name"> Совет директоров</div>
                         <div class="calendar-event__info">
                             <div class="calendar-event__info-header">
                                 <div class="date">8 мая</div>
@@ -98,8 +98,30 @@
             <div class="calendar-date">
                 <button class="date-item badge active">8</button>
                 <div class="calendar-events">
-                    <div class="calendar-event calendar-event--green" >Совет директоров</div>
-                    <div class="calendar-event calendar-event--ctrl" >Обход цеха №2</div>
+                    <div class="calendar-event calendar-event--green" >
+                        <div class="calendar-event__name">Совет директоров</div>
+                        <div class="calendar-event__info">
+                            <div class="calendar-event__info-header">
+                                <div class="date">8 мая</div>
+                                <div class="time time--green">12:00</div>
+                            </div>
+                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+                        </div>
+                    </div>
+                    <div class="calendar-event calendar-event--ctrl" >
+                        <div class="calendar-event__name">Обход цеха №2</div>
+                        <div class="calendar-event__info">
+                            <div class="calendar-event__info-header">
+                                <div class="date">8 мая</div>
+                                <div class="time time--ctrl">12:00</div>
+                            </div>
+                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="calendar-date">
@@ -114,7 +136,18 @@
             <div class="calendar-date">
                 <button class="date-item badge">12</button>
                 <div class="calendar-events">
-                    <div class="calendar-event calendar-event--green">Обход цеха №2</div>
+                    <div class="calendar-event calendar-event--green">
+                        <div class="calendar-event__name">Обход цеха №2</div>
+                        <div class="calendar-event__info">
+                            <div class="calendar-event__info-header">
+                                <div class="date">8 мая</div>
+                                <div class="time time--red">12:00</div>
+                            </div>
+                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="calendar-date">
@@ -141,9 +174,31 @@
             <div class="calendar-date  "><!--calendar-range range-end-->
                 <button class="date-item badge">20</button>
                 <div class="calendar-events">
-                    <div class="calendar-event calendar-event--green" >Совет директоров</div>
-                    <div class="calendar-event calendar-event--red">Встреча на тему катетов и синусов</div>
-                    <a class="calendar-event calendar-event--show-more js-calendar-more" href="#">Еще 5 событий</a>
+                    <div class="calendar-event calendar-event--green" >
+                        <div class="calendar-event__name">Совет директоров</div>
+                        <div class="calendar-event__info">
+                            <div class="calendar-event__info-header">
+                                <div class="date">8 мая</div>
+                                <div class="time time--red">12:00</div>
+                            </div>
+                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+                        </div>
+                    </div>
+                    <div class="calendar-event calendar-event--red">
+                        <div class="calendar-event__name">Встреча на тему катетов и синусов</div>
+                        <div class="calendar-event__info">
+                            <div class="calendar-event__info-header">
+                                <div class="date">8 мая</div>
+                                <div class="time time--red">12:00</div>
+                            </div>
+                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+                        </div>
+                    </div>
+                    <a class="calendar-event calendar-event--show-more js-calendar-more" href="#"> <div class="calendar-event__name">Еще 5 событий</div></a>
                 </div>
             </div>
             <div class="calendar-date">
@@ -182,7 +237,58 @@
             <div class="calendar-date next-month disabled">
                 <button class="date-item badge">1</button>
                 <div class="calendar-events">
-                    <div class="calendar-event calendar-event--red" >Встреча на тему катетов и синусов</div>
+                    <div class="calendar-event calendar-event--red" >
+                        <div class="calendar-event__name">Встреча на тему катетов и синусов</div>
+                        <div class="calendar-event__info">
+                            <div class="calendar-event__info-header">
+                                <div class="date">8 мая</div>
+                                <div class="time time--red">12:00</div>
+                            </div>
+                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade events-list" id="events-list" tabindex="-1" role="dialog" aria-labelledby="events-list"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-gallery__controls">
+            <button type="button" class="btn btn--close-modal close" aria-label="Close" data-dismiss="modal"
+                    title="Закрыть"></button>
+        </div>
+        <div class="modal-content events-list__content">
+            <h3 class="events-list__title">8 мая 2020</h3>
+            <div class="calendar-events-list">
+                <div class="calendar-event__info">
+                    <div class="calendar-event__info-header">
+                        <div class="time time--red">12:00</div>
+                    </div>
+                    <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+                    <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+                    <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+                </div>
+                <div class="calendar-event__info">
+                    <div class="calendar-event__info-header">
+                        <div class="time time--green">12:00</div>
+                    </div>
+                    <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+                    <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+                    <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+                </div>
+                <div class="calendar-event__info">
+                    <div class="calendar-event__info-header">
+                        <div class="time time--ctrl">12:00</div>
+                    </div>
+                    <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+                    <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+                    <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
                 </div>
             </div>
         </div>
