--- a/src/blocks/modules/calendar/calendar.html
+++ b/src/blocks/modules/calendar/calendar.html
@@ -54,20 +54,12 @@
             <div class="calendar-date prev-month">
                 <button class="date-item">26</button>
             </div>
-            <div class="calendar-date prev-month badge">
-                <button class="date-item badge">27</button>
+            <div class="calendar-date prev-month">
+                <button class="date-item badge js-calendar-mob">27</button>
                 <div class="calendar-events">
-                    <div class="calendar-event calendar-event--green">
+                    <div class="calendar-event calendar-event--green" data-id="#event_0">
                         <div class="calendar-event__name"> Совет директоров</div>
-                        <div class="calendar-event__info">
-                            <div class="calendar-event__info-header">
-                                <div class="date">8 мая</div>
-                                <div class="time time--red">12:00</div>
-                            </div>
-                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
-                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
-                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -96,31 +88,15 @@
                 <button class="date-item">7</button>
             </div>
             <div class="calendar-date">
-                <button class="date-item badge active">8</button>
+                <button class="date-item badge js-calendar-mob active">8</button>
                 <div class="calendar-events">
-                    <div class="calendar-event calendar-event--green" >
+                    <div class="calendar-event calendar-event--green" data-id="#event_1">
                         <div class="calendar-event__name">Совет директоров</div>
-                        <div class="calendar-event__info">
-                            <div class="calendar-event__info-header">
-                                <div class="date">8 мая</div>
-                                <div class="time time--green">12:00</div>
-                            </div>
-                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
-                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
-                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
-                        </div>
+
                     </div>
-                    <div class="calendar-event calendar-event--ctrl" >
+                    <div class="calendar-event calendar-event--ctrl" data-id="#event_2">
                         <div class="calendar-event__name">Обход цеха №2</div>
-                        <div class="calendar-event__info">
-                            <div class="calendar-event__info-header">
-                                <div class="date">8 мая</div>
-                                <div class="time time--ctrl">12:00</div>
-                            </div>
-                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
-                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
-                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -134,19 +110,10 @@
                 <button class="date-item">11</button>
             </div>
             <div class="calendar-date">
-                <button class="date-item badge">12</button>
+                <button class="date-item badge js-calendar-mob">12</button>
                 <div class="calendar-events">
-                    <div class="calendar-event calendar-event--green">
+                    <div class="calendar-event calendar-event--green" data-id="#event_3">
                         <div class="calendar-event__name">Обход цеха №2</div>
-                        <div class="calendar-event__info">
-                            <div class="calendar-event__info-header">
-                                <div class="date">8 мая</div>
-                                <div class="time time--red">12:00</div>
-                            </div>
-                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
-                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
-                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -172,31 +139,15 @@
                 <button class="date-item">19</button>
             </div>
             <div class="calendar-date  "><!--calendar-range range-end-->
-                <button class="date-item badge">20</button>
+                <button class="date-item badge js-calendar-mob">20</button>
                 <div class="calendar-events">
-                    <div class="calendar-event calendar-event--green" >
+                    <div class="calendar-event calendar-event--green" data-id="#event_4">
                         <div class="calendar-event__name">Совет директоров</div>
-                        <div class="calendar-event__info">
-                            <div class="calendar-event__info-header">
-                                <div class="date">8 мая</div>
-                                <div class="time time--red">12:00</div>
-                            </div>
-                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
-                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
-                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
-                        </div>
+
                     </div>
-                    <div class="calendar-event calendar-event--red">
+                    <div class="calendar-event calendar-event--red" data-id="#event_5">
                         <div class="calendar-event__name">Встреча на тему катетов и синусов</div>
-                        <div class="calendar-event__info">
-                            <div class="calendar-event__info-header">
-                                <div class="date">8 мая</div>
-                                <div class="time time--red">12:00</div>
-                            </div>
-                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
-                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
-                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
-                        </div>
+
                     </div>
                     <a class="calendar-event calendar-event--show-more js-calendar-more" href="#"> <div class="calendar-event__name">Еще 5 событий</div></a>
                 </div>
@@ -235,19 +186,10 @@
                 <button class="date-item">31</button>
             </div>
             <div class="calendar-date next-month disabled">
-                <button class="date-item badge">1</button>
+                <button class="date-item badge js-calendar-mob">1</button>
                 <div class="calendar-events">
-                    <div class="calendar-event calendar-event--red" >
+                    <div class="calendar-event calendar-event--red" data-id="#event_6">
                         <div class="calendar-event__name">Встреча на тему катетов и синусов</div>
-                        <div class="calendar-event__info">
-                            <div class="calendar-event__info-header">
-                                <div class="date">8 мая</div>
-                                <div class="time time--red">12:00</div>
-                            </div>
-                            <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
-                            <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
-                            <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
-                        </div>
                     </div>
                 </div>
             </div>
