--- a/src/blocks/modules/ads-modals-add/ads-modals-add.html
+++ b/src/blocks/modules/ads-modals-add/ads-modals-add.html
@@ -17,8 +17,8 @@
                     <span class="fields__placeholder">Описание объявления</span>
                 </label>
                 <label for="" class="fields">
-                    <input type="text" class="fields__input" placeholder="Цена, ₽">
-                    <span class="fields__placeholder">Цена, ₽</span>
+                    <input type="text" class="fields__input" placeholder="Цена, &#8381;">
+                    <span class="fields__placeholder">Цена, &#8381;</span>
                 </label>
                 <label for="" class="fields">
                     <input type="text" class="fields__input" placeholder="Телефон" value="+7 943 543 12 63">
@@ -104,8 +104,8 @@
                     <span class="fields__placeholder">Описание объявления</span>
                 </label>
                 <label for="" class="fields">
-                    <input type="text" class="fields__input" placeholder="Цена, ₽">
-                    <span class="fields__placeholder">Цена, ₽</span>
+                    <input type="text" class="fields__input" placeholder="Цена, &#8381;">
+                    <span class="fields__placeholder">Цена, &#8381;</span>
                 </label>
                 <label for="" class="fields">
                     <input type="text" class="fields__input" placeholder="Телефон" value="+7 943 543 12 63">
