--- a/src/blocks/modules/gallaryPopup-ads/gallaryPopup-ads.html
+++ b/src/blocks/modules/gallaryPopup-ads/gallaryPopup-ads.html
@@ -87,7 +87,7 @@
                     <div class="modal-content__ads">
                         <div class="modal-content__ads-header">
                             <div class="title">Ковка Enkei 5x100 r17</div>
-                            <div class="price"><b>40 000</b> ₽</div>
+                            <div class="price"><b>40 000</b> &#8381;</div>
                         </div>
                         <div class="ads-user__info">
                             <div class="date">5 мая</div>
